--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==5.0.2
 django-cors-headers==4.3.1
 django-rest-passwordreset==1.4.0
 djangorestframework==3.14.0
+python-dotenv==1.0.1
 pytz==2024.1
 sqlparse==0.4.4
 tzdata==2023.4
