--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2
-Django==5.0.2
+#Django==5.0.2
+Django==4.0.6
 django-cors-headers==4.3.1
 django-rest-passwordreset==1.4.0
 djangorestframework==3.14.0
